# RCompiler

./: .clang-tidy  .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  FAILED_TESTS  Makefile  PARSER_TESTING_COMPLETE.md  README.md  whitelist.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  component-template.yml  lexer-ci.yml  parser-ci.yml  preprocessor-ci.yml  release.yml  semantic-ci.yml
build_new/: CTestTestfile.cmake  DartConfiguration.tcl  integration_lexer_with_preprocessor  lexer_case_runner  parser_basic  parser_comprehensive  parser_comprehensive_runner  parser_simple_tests  parser_smoke_runner  unit_preprocessor
build_new/Testing/Temporary/: CTestCostData.txt
ci/expected_output/lexer/: arithmetic_control.tokens.txt  char_literals.tokens.txt  greedy_operators.tokens.txt  integer_followed_by_identifier.tokens.txt  integers_underscores.tokens.txt  invalid_symbols.tokens.txt  keywords_self.tokens.txt  no_whitespace.tokens.txt  path_fatarrow.tokens.txt  simple_function.tokens.txt  strange_names.tokens.txt  strange_number.tokens.txt  string_escaped.tokens.txt  unterminated_string.tokens.txt  yet_another_strange_name.tokens.txt
ci/expected_output/preprocessor/: comments.txt
ci/files/IR/: array_index.rs  basic_call.rs  builtin.c  builtin.ll  builtin.s  deref_and_path.rs  if_assign.rs  multiple_while.rs  struct_fields.rs  while_sum.rs
ci/files/lexer/: char_literals.rs  integer_followed_by_identifier.rs  integers_underscores.rs  keywords_self.rs  no_whitespace.rs  path_fatarrow.rs  unterminated_string.rs
ci/files/opt/: adce.rs  arr.rs  inline.rs  loop.rs  mem2reg.rs  sccp_const_arith.rs  sccp_const_if_false.rs  sccp_const_if_phi.rs  store.rs  strength_reduction.rs
ci/files/preprocessor/: comments.rs
examples/: comments.rs  fibonacci.rs  hello_world.rs
examples/ast/: 1.rs  10.rs  11.rs  12.rs  20.rs  23.rs  3.rs  4.rs  6.rs
examples/lexer/: arithmetic_control.tokens  char_literals.tokens  empty.rs  greedy_operators.tokens  integer_followed_by_identifier.tokens  integers_underscores.tokens  invalid_symbols.tokens  keywords_self.tokens  lifetimes_underscores.rs  lifetimes_underscores.tokens  no_whitespace.tokens  path_fatarrow.tokens  simple_function.tokens  strange_number.rs  string_escaped.rs  string_escaped.tokens  unterminated_string.tokens
examples/preprocessor/: comments.rs
include/ast/: parser.hpp  pretty_print.hpp  types.hpp
include/ast/nodes/: base.hpp  expr.hpp  pattern.hpp  stmt.hpp  topLevel.hpp  top_level.hpp
include/ast/parsers/: patternParser.hpp  pattern_parser.hpp
include/ast/utils/: parsec.hpp  pratt.hpp
include/ast/visitors/: pretty_print.hpp
include/backend/: passManager.hpp  pass_manager.hpp
include/backend/nodes/: instructions.hpp  operands.hpp
include/backend/passes/: asmEmitter.hpp  asm_emitter.hpp  instSelect.hpp  inst_select.hpp  phiElimination.hpp  phi_elimination.hpp  prologueEpilogue.hpp  prologue_epilogue.hpp  pseudoAsmEmitter.hpp  pseudo_asm_emitter.hpp  regalloc.hpp
include/common/: primitive_types.def
include/ir/: context.hpp  gen.hpp  ir.hpp  visit.hpp
include/ir/error/: exceptions.hpp
include/ir/instructions/: binary.hpp  controlFlow.hpp  control_flow.hpp  memory.hpp  misc.hpp  topLevel.hpp  top_level.hpp  type.hpp  visitor.hpp
include/lexer/: lexer.hpp  token_defs.def
include/opt/: passManager.hpp  pass_manager.hpp
include/opt/analysis/: dominator_tree.hpp  loop_info.hpp
include/opt/base/: baseVisitor.hpp  base_visitor.hpp
include/opt/cfg/: cfg.hpp  visit.hpp
include/opt/dce/: dce.hpp  visit.hpp
include/opt/functionInline/: func.hpp  functionInline.hpp
include/opt/function_inline/: function_inline.hpp
include/opt/instCombine/: instCombine.hpp
include/opt/inst_combine/: inst_combine.hpp
include/opt/licm/: licm.hpp
include/opt/local_memory/: load_forwarding.hpp
include/opt/mem2reg/: mem2reg.hpp  visit.hpp
include/opt/sccp/: context.hpp  sccp.hpp  visit.hpp
include/opt/utils/: cfgPrettyPrint.hpp  (+2 more)
include/parser/: parser.hpp
include/preprocessor/: preprocessor.hpp
include/semantic/: scope.hpp  semantic.hpp  types.hpp
include/utils/: logger.hpp
scripts/: ir_emit_and_compile  ir_emit_and_run_riscv  run_clang_tidy.sh  run_ir_tests.py  semantic_benchmark  semantic_benchmark.sh  test_runner.sh
src/: main.cpp  pretty_print.cpp
src/ast/: parser.cpp  types.cpp
src/backend/: passManager.cpp  pass_manager.cpp
src/ir/: context.cpp  gen.cpp  visit.cpp
src/lexer/: lexer.cpp
src/opt/: passManager.cpp  pass_manager.cpp
src/preprocessor/: preprocessor.cpp
src/semantic/: scope.cpp  semantic.cpp  types.cpp
src/utils/: logger.cpp
tests/: ci_dce_tests.cpp  ci_lexer_tests.cpp  ci_parser_tests.cpp  ci_preprocessor_tests.cpp
tests/integration/: lexer_w_preprocessor.cpp
tests/lexer/: arithmetic_control.rs  greedy_operators.rs  invalid_symbols.rs  strange_names.rs  strange_number.rs  yet_another_strange_name.rs
tests/unit/: const_evaluator_test.cpp  lexer_case_runner.cpp  parser_advanced_tests.cpp  parser_basic.cpp  parser_comprehensive.cpp  parser_comprehensive_runner.cpp  parser_error_tests.cpp  parser_pattern_tests.cpp  parser_simple_tests.cpp  parser_smoke_runner.cpp  parser_unit_tests.cpp  preprocessor.cpp  symbol_table_tests.cpp
(+119 files in other folders)
